fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,4 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
 }
