--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -129,7 +129,7 @@
 }
 
 .header img {
-    width: 260px;
+    width: 200px;
 }
 
 .header h1 {
